<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey"
    tools:context="com.hipla.retail.activity.ForgetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_130sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_50sdp"
            android:src="@mipmap/login_logo"
            android:scaleType="fitXY"/>


        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:background="@drawable/edt_background_corner"
            android:hint="@string/enteryouremail"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_10sdp"
            android:textColorHint="@color/colorGreydeep"
            android:textColor="@color/colorGreydeep" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/btn_height_small"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/btn_background_grey"
                android:elevation="@dimen/_1sdp"
                android:stateListAnimator="@null"
                android:text="@string/LOGIN"
                android:textColor="@color/colorGreydeep"
                android:textSize="@dimen/_18ssp"/>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/btn_height_small"
                android:layout_weight="1"
                android:background="@drawable/btn_background_green"
                android:stateListAnimator="@null"
                android:text="@string/SUBMIT"
                android:textColor="@color/colorGreendeep"
                android:textSize="@dimen/_18ssp"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>