<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="com.hipla.retail.activity.ScaningActivity" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGrey"
        tools:context="com.hipla.retail.activity.ScaningActivity">

        <ImageView
            android:id="@+id/iv_logout"
            android:layout_width="@dimen/_26sdp"
            android:layout_height="@dimen/_26sdp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_logout"
            android:layout_margin="@dimen/_10sdp"
            android:layout_alignParentRight="true"
            android:onClick="@{()->activity.logout()}"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">

            <ImageView
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/_50sdp"
                android:scaleType="fitXY"
                android:src="@drawable/login_logo"/>

            <Button
                android:id="@+id/btn_scan"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/_20sdp"
                android:background="@drawable/btn_green"
                android:text="@string/scan"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_17ssp" />

            <Button
                android:id="@+id/btn_loyal_customer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:background="@drawable/btn_green"
                android:text="@string/loyal_customers"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_17ssp"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/tv_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_medium"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorAccent"
                android:gravity="center"
                android:layout_margin="@dimen/m10"
                android:text="@string/door_msg"
                android:visibility="gone"/>

        </LinearLayout>

    </RelativeLayout>

</layout>